# pysegments

./: .gitmodules  CHANGELOG  CITATION.cff  CMakeLists.txt  README.md  pyproject.toml  pytest.ini  setup.py  testseg.py
Include/libRDE/: dyadic.h  dyadic_interval.h
benchmarks/: CMakeLists.txt  bm_segment.cpp
pysegments/: __init__.py
pysegments/tests/: test_dyadic_interval.py  test_interval.py  test_segment.py
src/: pysegments.cpp  pysegments.h  segment.cpp  segment.h
src/pysegments/: CMakeLists.txt  pysegments.cpp  pysegments.h
src/segments/: CMakeLists.txt  dyadic.h  dyadic_interval.h  dyadic_searcher.cpp  dyadic_searcher.h  expanding_searcher.cpp  expanding_searcher.h  scaled_predicate.cpp  scaled_predicate.h  segment.cpp  segments.h  test_search.cpp
